# helios

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  BUG_HANG_DIAGNOSIS.md  HLD.html  HLD.mmd  INVENTORY.md  OPTIMIZATION_REPORT.md  PHI_ARCHITECTURE_AUDIT.md  PLAN.md  PLAN_DAISY_ADVANCED.md  PLAN_PhaseB.md  PLAN_v2.md  PLAN_v3.md  PROJECT_LOG.md  README.md  RESEARCH_FRAMEWORK.md  REVIEW_v1.md  V23_WATCH.md  __init__.py  affect.py  agent.py  agent_awareness.py  allostasis.py  appraisal.py  audit_log.py  autobiographical.py  brain_references.md  cli_bridge.py  conation.py  core.py  daisy_emotion.py  dashboard.html  dashboard.py  decision.py  demo_longrun.py  demo_longrun_v2.py  demo_v10.py  demo_v12_openai.py  (+36 more)
helios_v2/: README.md  RESEARCH_LOG.md  pyproject.toml
helios_v2/docs/: API_AND_OPS_CONTRACT_GUIDE.md  ARCHITECTURE_BOUNDARIES.md  ARCHITECTURE_PHILOSOPHY.zh-CN.md  BRAIN_ARCHITECTURE_COMPARISON.md  OWNER_GUIDE.md  OWNER_GUIDE.zh-CN.md  PHASE_METRICS.md  PROGRESS_FLOW.en.md  PROGRESS_FLOW.zh-CN.md  REQUIREMENT_DISTANCE_TO_FINAL_GOAL.md  ROADMAP.zh-CN.md  TOTAL_DISTANCE_TO_FINAL_GOAL.md  brain.mmd
helios_v2/scripts/: _start_turing_ptemporal.sh  analyze_emotion_test.py  cli_dialogue_prerun.py  emotion_test_run.py  helios_turing_1000_stimuli.py  helios_turing_system_runner.py  monitor_turing_ptemporal.sh  r79_t7_smoke.py  r79a_proposed_system.txt  r79a_proposed_user.txt  r85_t20_1min_real_llm.py  r85_t20_dryrun.py  r_proto_learn_7_p5_feel_extended_smoke.py  r_proto_learn_7_p5_feel_smoke.py  r_proto_learn_p5a_ablation_study.py  run_llm_smoke.py  (+14 more)
(+2482 files in other folders)
